--- a/DotNetFramework/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample/Web.config
+++ b/DotNetFramework/Senparc.Weixin.MP.Sample/Senparc.Weixin.MP.Sample/Web.config
@@ -30,6 +30,9 @@
     <add key="WeixinToken" value="第三方URL对应的Token"/>
     <add key="WeixinEncodingAESKey" value="第三方URL对应的消息加解密密钥"/>
     <!-- 高级接口信息 -->
+    <!--<add key="WeixinAppId" value="微信AppId"/>
+    <add key="WeixinAppSecret" value="微信AppSecret"/>-->
+
     <add key="WeixinAppId" value="微信AppId"/>
     <add key="WeixinAppSecret" value="微信AppSecret"/>
     <!-- SDK提供的代理功能设置 -->
